--- a/css/master.css
+++ b/css/master.css
@@ -8,7 +8,6 @@
 header, main, footer{
   width: 50%;
   margin: 20px auto;
-
 }
 
 /* SPECIFIC RULES */
@@ -25,7 +24,6 @@ header{
 
 .second{
   background-color: blue;
-  position: relative;
 }
 
 .second::after{
@@ -38,19 +36,20 @@ header{
   background-color: lightblue;
 }
 
-.title{
-  height: 50px;
-  margin-bottom: 2.5vmax;
+#title{
+  height: 80px;
 }
 
 .container{
-  width: 30%;
+  width: 20%;
   height: 300px;
   float: left;
+  margin: 5% 0;
 }
 
-.container:nth-child(3){
-  margin: 0 5%;
+.container:nth-of-type(3){
+  width: 50%;
+  margin: 5% calc(100% - 95%);
 }
 
 footer{
